# doceteria_backend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
.github/workflows/: python-app.yml  restrict-pr.yml  restrict.yml  tests.yml
config/: config_model.py  database.py  logger_custom.py
migrations/: env.py
migrations/versions/: 18e8c76970b3_alterado_campo_de_pedido_de_items_para_.py  2b5731781267_create_initial_tables.py  3735e72715d2_alterado_relacao_em_items_de_items_para_.py  3b57bcd20b86_alter_table_items_column_preco_total_.py  6bb175712622_alterado_foreign_da_tabela_item_e_pedido.py
src/: main.py  models.py  routers.py  scherma.py
src/models/: __init__.py  categoria_model.py  cliente_model.py  ingrediente_model.py  item_model.py  pedido_model.py  pivot_ingrediente_receita.py  produto_model.py  receita_model.py  venda_model.py
src/routers/: categorias_router.py  cliente_router.py  pedido_router.py  produto_router.py  receita_router.py  venda_router.py
src/schermas/: categoria_scherma.py  cliente_scherma.py  item_scherma.py  pedido_scherma.py  produto_scherma.py  receita_scherma.py  venda_scherma.py
tests/: test_route_200.py
